--- a/index.html
+++ b/index.html
@@ -157,7 +157,13 @@
         <section id="about" class="about-section">
             <div class="container">
                 <h2>About Us</h2>
-                <p>At Damsel Food Enterprises, we specialize in creating delicious Nigerian snacks and small chops. Our commitment to quality ingredients and traditional recipes makes us your perfect choice for any occasion.</p>
+                <div class="about-content">
+                    <div class="owner-image">
+                        <img src="images/owner.jpg" alt="Owner of Damsel Food Enterprises" class="owner-photo">
+                        <h3 class="owner-name">Damsel</h3>
+                    </div>
+                    <p>At Damsel Food Enterprises, we specialize in creating delicious Nigerian snacks and small chops. Our commitment to quality ingredients and traditional recipes makes us your perfect choice for any occasion.</p>
+                </div>
             </div>
         </section>
 
@@ -166,20 +172,22 @@
                 <h2>Contact & Orders</h2>
                 <div class="order-info">
                     <h3>Place Your Order</h3>
-                    <div class="order-buttons">
-                        <a href="https://wa.me/2349046029078" class="whatsapp-button" target="_blank">
-                            <img src="images/whatsaap-icon.png" alt="WhatsApp" class="button-icon">
-                            Order on WhatsApp
-                        </a>
-                        <a href="tel:+2349046029078" class="call-button">
-                            <img src="images/phone-icon.png" alt="Phone" class="button-icon">
-                            Call to Order
-                        </a>
-                    </div>
-                    <div class="delivery-info">
-                        <h4>Nationwide Delivery Available</h4>
-                        <p>We deliver to all states in Nigeria</p>
-                        <p class="delivery-note">* Delivery charges vary by location</p>
+                    <div class="contact-grid">
+                        <div class="order-buttons">
+                            <a href="https://wa.me/2349046029078" class="whatsapp-button" target="_blank">
+                                <img src="images/whatsapp-icon.png" alt="WhatsApp" class="button-icon">
+                                <span>Order on WhatsApp</span>
+                            </a>
+                            <a href="tel:+2349046029078" class="call-button">
+                                <img src="images/phone-icon.png" alt="Phone" class="button-icon">
+                                <span>Call to Order</span>
+                            </a>
+                        </div>
+                        <div class="delivery-info">
+                            <h4>Nationwide Delivery Available</h4>
+                            <p>We deliver to all states in Nigeria</p>
+                            <p class="delivery-note">* Delivery charges vary by location</p>
+                        </div>
                     </div>
                 </div>
             </div>
