Restore original contact section layout

--- a/index.html
+++ b/index.html
@@ -172,22 +172,20 @@
                 <h2>Contact & Orders</h2>
                 <div class="order-info">
                     <h3>Place Your Order</h3>
-                    <div class="contact-grid">
-                        <div class="order-buttons">
-                            <a href="https://wa.me/2349046029078" class="whatsapp-button" target="_blank">
-                                <img src="images/whatsapp-icon.png" alt="WhatsApp" class="button-icon">
-                                <span>Order on WhatsApp</span>
-                            </a>
-                            <a href="tel:+2349046029078" class="call-button">
-                                <img src="images/phone-icon.png" alt="Phone" class="button-icon">
-                                <span>Call to Order</span>
-                            </a>
-                        </div>
-                        <div class="delivery-info">
-                            <h4>Nationwide Delivery Available</h4>
-                            <p>We deliver to all states in Nigeria</p>
-                            <p class="delivery-note">* Delivery charges vary by location</p>
-                        </div>
+                    <div class="order-buttons">
+                        <a href="https://wa.me/2349046029078" class="whatsapp-button" target="_blank">
+                            <img src="images/whatsapp-icon.png" alt="WhatsApp" class="button-icon">
+                            Order on WhatsApp
+                        </a>
+                        <a href="tel:+2349046029078" class="call-button">
+                            <img src="images/phone-icon.png" alt="Phone" class="button-icon">
+                            Call to Order
+                        </a>
+                    </div>
+                    <div class="delivery-info">
+                        <h4>Nationwide Delivery Available</h4>
+                        <p>We deliver to all states in Nigeria</p>
+                        <p class="delivery-note">* Delivery charges vary by location</p>
                     </div>
                 </div>
             </div>
